--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,15 @@ dependencies:
     sdk: flutter
   location: ^4.3.0
   google_fonts: ^2.1.0
+  json_annotation: ^4.0.1
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies: 
+  build_runner: ^2.0.5
   flutter_lints: ^1.0.3
   flutter_test: 
     sdk: flutter
+  json_serializable: ^4.1.3
 
 flutter: 
   uses-material-design: true
