--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,16 @@ dependencies:
 
 dev_dependencies: 
   build_runner: ^2.0.5
+  flutter_launcher_icons: ^0.9.0
   flutter_lints: ^1.0.3
   flutter_test: 
     sdk: flutter
   json_serializable: ^4.1.3
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/wind.png"
 
 flutter: 
   uses-material-design: true
