--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
   get: 4.1.4
   flutter: 
     sdk: flutter
-  location: ^4.3.0
   google_fonts: ^2.1.0
   json_annotation: ^4.0.1
   flutter_spinkit: ^5.0.0
+  geolocator: ^7.2.0+1
 
 dev_dependencies: 
   build_runner: ^2.0.5
