--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   google_fonts: ^2.1.0
   json_annotation: ^4.0.1
   flutter_spinkit: ^5.0.0
-  geolocator: ^7.2.0+1
+  geolocator: ^7.4.0
 
 dev_dependencies: 
   build_runner: ^2.0.5
