--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,6 +57,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            ndk {
+                debugSymbolLevel = 'FULL'
+            }
         }
     }
 }
